# langsync-cli

./: .gitignore  Pipfile  README.md  install.sh  locsync.json  pyproject.toml
.gemini/: GEMINI.md
messages/: en-GB.json  es-ES.json  fr-FR.json
src/langsync/: cli.py  config.py  git_baseline.py  processor.py  state.py  translator.py  update_check.py
src/locsync/: cli.py  config.py  translator.py
tests/: test_config.py  test_git_baseline.py  test_processor.py  test_state.py  test_translator.py
