[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langsync"
version = "0.4.1"
description = "A modern I18N sync tool with parallel translation."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "click",
    "rich",
    "deep-translator"
]

[project.urls]
Homepage = "https://github.com/dracu-lah/langsync-cli"
Repository = "https://github.com/dracu-lah/langsync-cli"
Issues = "https://github.com/dracu-lah/langsync-cli/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock"
]

[project.scripts]
langsync = "langsync.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
